--- a/src/main/resources/com/example/project3/TuitionManagerView.fxml
+++ b/src/main/resources/com/example/project3/TuitionManagerView.fxml
@@ -103,7 +103,7 @@
                                         <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                                             <children>
                                                 <Button fx:id="addButton" mnemonicParsing="false" onAction="#addStudentButton" text="Add" />
-                                                <Button mnemonicParsing="false" text="Remove" />
+                                                <Button fx:id="removeButton" mnemonicParsing="false" onAction="#removeStudentButton" text="Remove" />
                                                 <Button mnemonicParsing="false" text="Change Major" />
                                                 <Button mnemonicParsing="false" text="Load From File" />
                                             </children>
