load from file implemented

--- a/src/main/resources/com/example/project3/TuitionManagerView.fxml
+++ b/src/main/resources/com/example/project3/TuitionManagerView.fxml
@@ -87,7 +87,7 @@
                                                 <Button fx:id="addButton" mnemonicParsing="false" onAction="#addStudentButton" text="Add" />
                                                 <Button fx:id="removeButton" mnemonicParsing="false" onAction="#removeStudentButton" text="Remove" />
                                                 <Button fx:id="changeButton" mnemonicParsing="false" onAction="#changeMajorButton" text="Change Major" />
-                                                <Button mnemonicParsing="false" text="Load From File" />
+                                                <Button mnemonicParsing="false" onAction="#loadFromFileButton" text="Load From File" />
                                             </children>
                                         </HBox>
                                     </children>
